fixed issue with bg colour + width covering stars
<3 wrappers

--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,12 @@ section.blurb {
     margin: 80px 10px;
 }
 
+section.blurb div.wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 section.blurb h2,
 section.blurb h2 a,
 section.blurb h2 a:visited {
@@ -121,8 +127,9 @@ section.blurb h2 a:visited {
     color: white;
     font-size: 40px;
     text-align: center;
-    margin: 50px 0;
+    margin: 25px 0;
     background-color: #14141c;
+    width: fit-content;
 }
 
 section.blurb h2 a:hover {
@@ -134,8 +141,9 @@ section.blurb h1 {
     color: white;
     font-size: 50px;
     text-align: center;
-    margin: 50px 0;
+    margin: 25px 0;
     background-color: #14141c;
+    width: fit-content;
 }
 
 section.blurb p {
